2008-04-21  Adam Roben  <aroben@apple.com>

        Fix Bug 18615: Crash in PluginPackage::hash

        <https://bugs.webkit.org/show_bug.cgi?id=18615>

        Reviewed by Anders Carlsson.

        * plugins/PluginDatabase.cpp:
        (WebCore::PluginDatabase::refresh): Don't pass a null PluginPackage*
        to add().

2008-04-21  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        Add cache group implementation.

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::scheduleApplicationCacheLoad):
        * loader/appcache/ApplicationCache.cpp:
        (WebCore::ApplicationCache::requestIsHTTPOrHTTPSGet):
        (WebCore::ApplicationCache::resourceForRequest):
        * loader/appcache/ApplicationCache.h:
        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::cacheGroupMap):
        (WebCore::ApplicationCacheGroup::ApplicationCacheGroup):
        (WebCore::ApplicationCacheGroup::selectCache):
        (WebCore::ApplicationCacheGroup::selectCacheWithoutManifestURL):
        (WebCore::ApplicationCacheGroup::finishedLoadingMainResource):
        (WebCore::ApplicationCacheGroup::documentLoaderDestroyed):
        (WebCore::ApplicationCacheGroup::cacheDestroyed):
        (WebCore::ApplicationCacheGroup::update):
        (WebCore::ApplicationCacheGroup::didReceiveResponse):
        (WebCore::ApplicationCacheGroup::didReceiveData):
        (WebCore::ApplicationCacheGroup::didFinishLoading):
        (WebCore::ApplicationCacheGroup::didFail):
        (WebCore::ApplicationCacheGroup::didReceiveManifestResponse):
        (WebCore::ApplicationCacheGroup::didReceiveManifestData):
        (WebCore::ApplicationCacheGroup::didFinishLoadingManifest):
        (WebCore::ApplicationCacheGroup::cacheUpdateFailed):
        (WebCore::ApplicationCacheGroup::didFailToLoadManifest):
        (WebCore::ApplicationCacheGroup::checkIfLoadIsComplete):
        (WebCore::ApplicationCacheGroup::startLoadingEntry):